--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             <div id="post">
              <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
               <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-              <p><img src="imagenes/imagen.jpg" width="100%" /></p>
+              <p><img src="https://i.imgur.com/7qDu5AZ.jpeg" width="100%" /></p>
               <p>Los blogs son la mejor forma de compartir información y tus ideas.
                   Mucho más que ir a conferencias o salir en YouTube. Excepto si eres rockstar. Pero estadisticamente no lo eres.... por ahora.
               </p>
